
[package]
name = "discord_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version = "0.11.1", default-features = false, features = ["client", "gateway", "rustls_backend", "model","collector","builder"]}
tokio = { version = "1.16.1", features = ["full"] }
rand = "0.8.4"
serde = "1.0.137"
serde_json = "1.0.81"
scan_fmt = "0.2.6"
chrono = "0.4.19"

[dependencies.rusqlite]
version = "0.27.0"
features = ["bundled"]